[package]
name = "superblog"
version = "0.1.0"
authors = ["Orange <capnorange@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket", version = "0.5.0-dev", branch = "master" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.3.9"

[dependencies.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket"
version = "0.5.0-dev"
branch = "master"
default-features = false
features = ["json"]
